# simgrep

./: .gitignore  .repo_ignore  Makefile  README.md  hello.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: architecture.md  implementation-plan.md  use-cases.md
docs/architecture-decision-records/: ADR-001.md
scripts/: cache_hf_model.py
sentence_transformers/: __init__.py
simgrep/: config.py  ephemeral_searcher.py  exceptions.py  formatter.py  indexer.py  main.py  metadata_db.py  metadata_store.py  models.py  processor.py  project_manager.py  repository.py  searcher.py  utils.py  vector_store.py
simgrep/adapters/: hf_chunker.py  sentence_embedder.py  unstructured_extractor.py  usearch_index.py
simgrep/core/: abstractions.py  context.py  errors.py  models.py
simgrep/services/: index_service.py  search_service.py
simgrep/ui/: formatters.py
tests/: README.md  conftest.py
tests/contract/: conftest.py
tests/contract/ports/: embedder_contract.py  repository_contract.py  text_extractor_contract.py  token_chunker_contract.py  vector_index_contract.py
tests/e2e/: conftest.py  test_cli_ephemeral_e2e.py  test_cli_gitignore_e2e.py  test_cli_persistent_e2e.py  test_e2e_cli_errors_and_prompts.py  test_e2e_ephemeral.py  test_e2e_gitignore.py  test_e2e_persistent.py  test_project_workflow.py
tests/integration/: test_global_config.py  test_indexer_parallel.py  test_indexer_persistent.py  test_indexer_workers.py  test_searcher_persistent_integration.py
tests/property/: test_chunker.py  test_vector_store_property.py
tests/unit/: test_config.py  test_config_utils_additional.py  test_ephemeral_searcher.py  test_formatter.py  test_gitignore.py  test_indexer_methods.py  test_main_patterns.py  test_metadata_db.py  test_metadata_db_persistent.py  test_processor.py  test_project_cli.py  test_project_index_search.py  test_project_manager.py  test_search_inmemory_top.py  test_searcher.py  test_searcher_persistent.py  test_vector_store.py  test_vector_store_persistent.py
tests/unit/application/: test_ephemeral_searcher.py  test_index_service.py  test_indexer.py  test_search_service.py
tests/unit/domain/: test_file_gathering.py  test_formatters.py  test_utils.py
tests/unit/infrastructure/: conftest.py  test_config.py  test_hf_adapters.py  test_hf_chunker_property.py  test_metadata_db.py  test_repository.py  test_unstructured_extractor.py  test_usearch_index.py  test_usearch_index_property.py
transformers/: __init__.py
unstructured/documents/: elements.py
unstructured/partition/: auto.py
usearch/: __init__.py  index.py
