[project]
name = "simgrep-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "typer>=0.15.4",
    "unstructured[md]>=0.13.0",
]

[project.scripts]
simgrep = "simgrep.main:app"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[tool.ruff]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]

[tool.mypy]
# Basic mypy configuration
python_version = "3.12" # Or your target Python version (e.g., 3.10, 3.11)
# warn_return_any = true # Good to enable early
# warn_unused_configs = true # Good to enable early
# Add more strictness progressively. For D0.1, just having the section is key.
# For mypy to recognize 'simgrep' as a package, ensure simgrep/__init__.py exists.