[project]
name = "simgrep-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "typer>=0.15.4",
    "unstructured[md]>=0.13.0",
    "sentence-transformers>=2.2.0",
    "usearch>=2.9.0",
    "numpy>=1.23.0",
    "duckdb>=0.10.0",
]

[project.scripts]
simgrep = "simgrep.main:app"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.2.0",
    "ruff>=0.4.0,<0.5.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12" # Or your target Python version (e.g., 3.10, 3.11)
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
    "timeout: set timeout for a test (requires pytest-timeout)",
]

[tool.setuptools]
packages = ["simgrep"]
